--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -16,3 +16,9 @@ services:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
       POSTGRES_DB: todo-db
+  
+  frontend:
+    build: ./frontend
+    restart: always
+    ports:
+      - "3000:3000"
