--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,12 +1,6 @@
 version: '3'
 
 services:
-  backend:
-    build: ./backend
-    restart: always
-    ports:
-      - "8000:8000"
-  
   database:
     image: postgres
     restart: always
@@ -17,8 +11,18 @@ services:
       POSTGRES_PASSWORD: postgres
       POSTGRES_DB: todo-db
   
+  backend:
+    build: ./backend
+    restart: always
+    ports:
+      - "8000:8000"
+    depends_on:
+      - database
+  
   frontend:
     build: ./frontend
     restart: always
     ports:
       - "3000:3000"
+    depends_on:
+      - backend
